# chinese_chatbot_corpus

./: pyproject.toml  readme.md
process_pipelines/: chatterbot.py  douban.py  ptt.py  qingyun.py  subtitle.py  tieba.py  weibo.py  xiaohuangji.py
