[tool.poetry]
name = "chinese_chatbot_corpus"
version = "0.1.0"
description = ""
authors = ["codemayq https://github.com/codemayq"]

[tool.poetry.dependencies]
python = ">=2.7,<3.0.0 || >=3.5.0,<3.9"
chardet = "^4.0.0"
JPype1 = "0.7.0"
pyhanlp = "^0.1.79"
urllib3 = "^1.26.6"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
rope = "^0.19.0"
pylint = "^2.8.2"
flake8 = "^3.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
